# morning-briefing-agent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-claude-coauthor.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.knowledge-base/: README.md  integration-patterns.md
.knowledge-base/litellm-proxy/: _map.md  calling-from-python.md  config-yaml-reference.md  docker-quickstart.md  troubleshooting.md  virtual-keys-and-rate-limits.md
.knowledge-base/openrouter/: _map.md  authentication.md  gotchas.md  models-and-parameters.md  python-usage.md
.knowledge-base/strands-agents/: _map.md  agent-and-tools.md  gotchas.md  installation.md  observability.md  quickstart-example.md  streaming-and-callbacks.md
.knowledge-base/strands-agents/model-providers/: _map.md  bedrock.md  litellm.md
docs/: 20260423_Morning_briefing_agent_build_guide.docx  working-with-claude-code.md
src/morning_briefing_agent/: agent.py  cli.py  clients.py  config.py  google_auth.py  models.py  time_utils.py
src/morning_briefing_agent/tools/: calendar.py  gmail.py  slack.py
tests/: conftest.py  test_agent.py  test_cli.py  test_clients.py  test_config.py  test_google_auth.py
tests/fixtures/: calendar_event_all_day.json  calendar_event_cancelled.json  calendar_event_self_declined.json  calendar_event_with_attendees.json  gmail_message_long_body.json  gmail_message_unread.json  slack_channel_list.json  slack_conversation_history.json
tests/tools/: test_calendar.py  test_gmail.py  test_slack.py
