[project]
name = "morning-briefing-agent"
version = "0.2.0"
description = "AI agent that checks Gmail, Google Calendar, and Slack, then synthesizes a prioritized morning briefing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.43.0",
    "strands-agents[litellm]>=1.45.0",
]

[project.scripts]
morning-briefing = "morning_briefing_agent.cli:main"

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morning_briefing_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".claude"]

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "RET",
  "ARG",
  "PTH",
  "N",
  "ANN",
  "S",
  "DTZ",
  "T20",
  "TID",
]
ignore = [
  "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "ANN", "ARG"]
"src/morning_briefing_agent/cli.py" = ["T20"]
# Protocol kwargs must match the third-party Google/Slack API's own camelCase names.
"src/morning_briefing_agent/tools/gmail.py" = ["N803"]
"src/morning_briefing_agent/tools/calendar.py" = ["N803"]

[tool.ruff.lint.isort]
known-first-party = ["morning_briefing_agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
strict = true
warn_unreachable = true
no_implicit_reexport = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "googleapiclient.*",
  "google_auth_oauthlib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "morning_briefing_agent.google_auth"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib --cov=morning_briefing_agent --cov-branch --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: hits real network/OAuth; none exist yet, reserved for future manual-only tests",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:google.*",
  "ignore::DeprecationWarning:oauth2client.*",
]

[tool.coverage.run]
branch = true
source = ["src/morning_briefing_agent"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
